Fixed wrapping header

--- a/NHS111/NHS111.Web/Content/css_NhsUK/application.css
+++ b/NHS111/NHS111.Web/Content/css_NhsUK/application.css
@@ -2143,21 +2143,21 @@ button[disabled=disabled] {
     font-size: 1.1em;
     line-height: 1.3em;
 }
-/*.header-title {
-    clear: both;
-    padding: 0 0 12px 0;
+.header-title {
+    float: left;
+    clear: none;
+    padding: 22px 0 0 12px;
     color: #ffffff;
     font-size: 1.5em;
 }
-@media screen and (min-width: 40em) {*/
+
+@media (max-width: 335px) {
     .header-title {
-        float: left;
-        clear: none;
-        padding: 22px 0 0 12px;
-    color: #ffffff;
-    font-size: 1.5em;
+        padding: 7px 0;
+        clear: both;
     }
-/*}*/
+}
+
 .header-title .phase-tag {
     display: -moz-inline-stack;
     display: inline-block;
